[project]
name = "loggerjava"
version = "v0.7.5.dev1"
authors = [
  { name="HTony03", email="HTony03@foxmail.com" },
]
description = "an easy logger outputs like java logs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/HTony03/loggerjava"
Issues = "https://github.com/HTony03/loggerjava/issues"